Updates from Overleaf

--- a/tex/fundamentals.tex
+++ b/tex/fundamentals.tex
@@ -1,6 +1,6 @@
 %% fundamentals.tex
 The biological neuronal system not only initially inspired neural networks but also this thesis.
-Accordingly, in \secref{neurons}, it is explained how biological neurons work and are related to their artificial counterparts.
+Accordingly, in \secref{neurons}, it is explained how biological neurons work and they are related to their artificial counterparts.
 Next, artificial neural networks, connecting many artificial neurons, are described in \secref{ann}.
 In \secref{limitationsDL}, the limitations of such artificial neural networks are pointed out.
 Finally, in \secref{neurocomputing}, biologically more plausible learning methods related to this thesis are explored.
@@ -54,7 +54,7 @@ Thus, among the most important differences between biological and artificial neu
 
 Biological findings strongly inspire the proposed vision framework.
 Since biological systems still have many advantages compared to their artificial counterpart, the differences between these systems are of interest and could be promising in developing novel architectures.
-Therefore, in \secref{neuroscience_findings}, we dive deeper into biological principles, identify central concepts of the human's vision system, and transfer them to a computational framework.
+Therefore, in \secref{neuroscience_findings}, biological principles related to the human's vision system are examined in more detail.
 
 \section{Artificial Neural Networks}\seclbl{ann}
 McCulloch and Pitts \sidecite{mcculloch_logical_1943} proposed the first model of a neuron that can be connected to other neurons.
