--- a/tex/probabilistic_framework.tex
+++ b/tex/probabilistic_framework.tex
@@ -392,7 +392,7 @@ Unfortunately, it is not sufficient to calculate the similarity between features
 \end{figure}
 In \figref{projection_operations}, the operations needed to deal with different spatial arrangements are visualised.
 Projection fibres must be invariant to translation, rotation, and deformation. However, such transformation can occur not only globally, as depicted in \figref{projection_operations}, but also locally.
-In the following, in \secref{framework_s2_sim} is described how the similarity between local areas connected by a projection fibre can be measured. This statistic is needed to decide whether a control unit should switch on. Subsequently, in \secref{framework_s2_mapping} is described how the projection fibres can be wired.
+In \secref{framework_s2_sim}, it is described how the similarity between local areas connected by a projection fibre can be measured. This statistic is needed to decide whether a control unit should switch on. Subsequently, in \secref{framework_s2_mapping}, it is described how the projection fibres can be wired.
 
 \subsection{Measuring Similarity}\seclbl{framework_s2_sim}
 Correspondence-based mapping requires measuring feature similarity.
