--- a/tex/related_work.tex
+++ b/tex/related_work.tex
@@ -1,5 +1,5 @@
 %% related_work.tex
-The related work of the thesis is presented in this chapter. In \secref{alternative_approaches}, diverse learning frameworks are presented that deviate from the mainstream but might be promising for building more effective learning principles. Afterwards, in \secref{natural_intelligence} an introduction to a publication titled ``A Theory of Natural Intelligence'' by \citeay{von_der_malsburg_theory_2022} is provided. This work is the main source of inspiration for this thesis and is summarised in detail.
+The related work of the thesis is presented in this chapter. In \secref{alternative_approaches}, diverse learning frameworks are presented that deviate from the mainstream but might be promising for building more effective learning principles. Afterwards, in \secref{natural_intelligence}, an introduction to a publication titled ``A Theory of Natural Intelligence'' by \citeay{von_der_malsburg_theory_2022} is provided. This work is the main source of inspiration for this thesis and is summarised in detail.
 This theory can be implemented by combining projection fibres with lateral connections in a self-organising manner. Therefore, projection fibres are summarised in \secref{projection_fibres} and work associated with self-organisation is reviewed in \secref{self_org_related}. Self-organisation is not compatible with end-to-end backpropagation of error. Thus, alternative training algorithms are presented in \secref{alt_train_algo}.
 
 
